Все добавил, кроме полей, которые отвечают за время юронирования(как я понял)